Fixed a flex/overflow issue in cocktail.ui.StackNode
Use height: 100% instead of overflow: hidden to size stack nodes vertically, so
they can contain popups.

--- a/cocktail/ui/resources/styles/cocktail-ui-stacknode.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-stacknode.scss
@@ -99,8 +99,7 @@
 #stackNodeContent {
     display: flex;
     flex-direction: column;
-    flex: 1 1 auto;
-    overflow: hidden;
+    height: 100%;
     border: 1px solid $stacknode-exposed-border-color;
     border-right: none !important;
     border-bottom: none !important;
